--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -91,10 +91,11 @@
 
           <a href="https://rashardiman.github.io/">Rashards_iMAN👦🏾</a>
           <a href="https://rashardsdata.github.io/">RashardsData👦🏾</a>
+          <a href="{{ site.url }}/astronomy">AstronomY</a>
           <a href="https://rashardgds.github.io/" itemscope itemtype="https://schema.org/Person" itemprop="name">👦🏾RashardGDS[MRO/JUNO]</a>
-          <a href="{{ site.url }}{{ site.baseurl }}/compiling">👦🏾💻./CompilingBlog=></a>        
+          <a href="{{ site.url }}/compiling">👦🏾💻./CompilingBlog=></a>        
            <a href="https://thakarashard.github.io/">Thaka👦🏾Rashard</a>
-           <a href="{{ site.url }}{{ site.baseurl }}/rashardlearned/la/frontpage/sub/blog/2025/10/21/currentlycompiling.html">RashardLearned📚</a>
+           <a href="{{ site.url }}/rashardlearned/la/frontpage/sub/blog/2025/10/21/currentlycompiling.html">RashardLearned📚</a>
             <a href="https://rashard-ecostress-jpl-iss.github.io/">👦🏾Rashards_iSS🚀</a>
       
           
@@ -110,7 +111,7 @@
         </button>
         <div class="dropdown-content">
           
-          <a href="{{ site.url }}{{ site.baseurl }}/astronomy">AstronomY</a>
+        
           <a href="https://rashardmro.tumblr.com/">rashardmro🌌</a>
           <a href="https://rashardsmaps.tumblr.com/">rashardsmaps🗺️</a>
           <a href="https://rashardlanasa.tumblr.com/">rashard_la_nasa👨‍🚀</a>  
@@ -120,12 +121,12 @@
            <a href="https://santamonicashaadi.tumblr.com/">SantnMoniKAshaadi🏖️</a>
           <a href="https://bubblegumpop01.tumblr.com/">BubbleGumPop01🍭</a>
            <a href="https://bubblegumfm01.tumblr.com/">BubbleGumFM🍭</a>
-          <a href="{{ site.url }}{{ site.baseurl }}/linux">linux</a>
-          <a href="{{ site.url }}{{ site.baseurl }}/mybinder">mYBinder</a>
-           <a href="{{ site.url }}{{ site.baseurl }}/rashardmro">RashardMRO</a>
-          <a href="{{ site.url }}{{ site.baseurl }}/thakarashard">ThakaRashard</a>
-           <a href="{{ site.url }}{{ site.baseurl }}/twitters">TwitterS</a>
-           <a href="{{ site.url }}{{ site.baseurl }}/cv">curriculum vitae</a>
+          <a href="{{ site.url }}/linux">linux</a>
+          <a href="{{ site.url }}/mybinder">mYBinder</a>
+           <a href="{{ site.url }}/rashardmro">RashardMRO</a>
+          <a href="{{ site.url }}/thakarashard">ThakaRashard</a>
+           <a href="{{ site.url }}/twitters">TwitterS</a>
+           <a href="{{ site.url }}/cv">curriculum vitae</a>
           <a href="https://moonlov3r.wordpress.com/blog-feed/">moonlov3r - WP</a>
           
           
